book: update de
Updated via the `update-book.yml` GitHub workflow.

--- a/external/book/content/book/de/v2/Anhang-C:-Git-Kommandos-Setup-und-Konfiguration.html
+++ b/external/book/content/book/de/v2/Anhang-C:-Git-Kommandos-Setup-und-Konfiguration.html
@@ -17,6 +17,9 @@ book:
     next: book/de/v2/Anhang-C:-Git-Kommandos-Projekte-importieren-und-erstellen
 title: Git - Setup und Konfiguration
 url: "/book/de/v2/Anhang-C:-Git-Kommandos-Setup-und-Konfiguration.html"
+aliases:
+- "/book/de/commands.html"
+- "/book/de/v1/commands.html"
 ---
 <p>Im Laufe des Buches haben wir Dutzende von Git-Befehlen vorgestellt und uns bemüht, sie in eine Art Erzählung einzuführen und der Handlung langsam weitere Befehle hinzuzufügen.
 Das führt jedoch dazu, dass wir Beispiele für die Verwendung der Befehle im ganzen Buch verstreut wiederfinden.</p><p>In diesem Anhang werden die im gesamten Buch behandelten Git-Befehle genauer beschreiben, grob gruppiert nach ihren Einsatzgebieten.
