--- a/external/book/content/book/de/v2/Erste-Schritte-Git-Basis-Konfiguration.html
+++ b/external/book/content/book/de/v2/Erste-Schritte-Git-Basis-Konfiguration.html
@@ -16,6 +16,9 @@ book:
     previous: book/de/v2/Erste-Schritte-Git-installieren
     next: book/de/v2/Erste-Schritte-Hilfe-finden
 title: Git - Git Basis-Konfiguration
+aliases:
+- "/book/de/Los-geht’s-Git-konfigurieren.html"
+- "/book/de/v1/Los-geht’s-Git-konfigurieren.html"
 ---
 <h2 id="_first_time">Git Basis-Konfiguration</h2>
 <div class="paragraph">
