--- a/external/book/content/book/de/v2/Erste-Schritte-Git-installieren.html
+++ b/external/book/content/book/de/v2/Erste-Schritte-Git-installieren.html
@@ -16,6 +16,9 @@ book:
     previous: book/de/v2/Erste-Schritte-Die-Kommandozeile
     next: book/de/v2/Erste-Schritte-Git-Basis-Konfiguration
 title: Git - Git installieren
+aliases:
+- "/book/de/Los-geht’s-Git-installieren.html"
+- "/book/de/v1/Los-geht’s-Git-installieren.html"
 ---
 <h2 id="_git_installieren">Git installieren</h2>
 <div class="paragraph">
