--- a/external/book/content/book/de/v2/Erste-Schritte-Hilfe-finden.html
+++ b/external/book/content/book/de/v2/Erste-Schritte-Hilfe-finden.html
@@ -16,6 +16,9 @@ book:
     previous: book/de/v2/Erste-Schritte-Git-Basis-Konfiguration
     next: book/de/v2/Erste-Schritte-Zusammenfassung
 title: Git - Hilfe finden
+aliases:
+- "/book/de/Los-geht’s-Hilfe-finden.html"
+- "/book/de/v1/Los-geht’s-Hilfe-finden.html"
 ---
 <h2 id="_git_help">Hilfe finden</h2>
 <div class="paragraph">
