--- a/external/book/content/book/de/v2/Erste-Schritte-Kurzer-Überblick-über-die-Historie-von-Git.html
+++ b/external/book/content/book/de/v2/Erste-Schritte-Kurzer-Überblick-über-die-Historie-von-Git.html
@@ -17,6 +17,9 @@ book:
     next: book/de/v2/Erste-Schritte-Was-ist-Git%3F
 title: Git - Kurzer Überblick über die Historie von Git
 url: "/book/de/v2/Erste-Schritte-Kurzer-Überblick-über-die-Historie-von-Git.html"
+aliases:
+- "/book/de/Los-geht’s-Die-Geschichte-von-Git.html"
+- "/book/de/v1/Los-geht’s-Die-Geschichte-von-Git.html"
 ---
 <h2 id="_kurzer_überblick_über_die_historie_von_git">Kurzer Überblick über die Historie von Git</h2>
 <div class="paragraph">
