--- a/external/book/content/book/de/v2/Erste-Schritte-Was-ist-Git?.html
+++ b/external/book/content/book/de/v2/Erste-Schritte-Was-ist-Git?.html
@@ -19,6 +19,8 @@ title: Git - Was ist Git?
 url: "/book/de/v2/Erste-Schritte-Was-ist-Git?.html"
 aliases:
 - "/book/de/v2/Erste-Schritte-Was-ist-Git.html"
+- "/book/de/Los-geht’s-Git-Grundlagen.html"
+- "/book/de/v1/Los-geht’s-Git-Grundlagen.html"
 ---
 <h2 id="what_is_git_section">Was ist Git?</h2>
 <div class="paragraph">
