--- a/external/book/content/book/de/v2/Erste-Schritte-Was-ist-Versionsverwaltung?.html
+++ b/external/book/content/book/de/v2/Erste-Schritte-Was-ist-Versionsverwaltung?.html
@@ -19,6 +19,10 @@ title: Git - Was ist Versionsverwaltung?
 url: "/book/de/v2/Erste-Schritte-Was-ist-Versionsverwaltung?.html"
 aliases:
 - "/book/de/v2/Erste-Schritte-Was-ist-Versionsverwaltung.html"
+- "/book/de/Los-geht’s.html"
+- "/book/de/v1/Los-geht’s.html"
+- "/book/de/Los-geht’s-Wozu-Versionskontrolle?.html"
+- "/book/de/v1/Los-geht’s-Wozu-Versionskontrolle?.html"
 ---
 <p>In diesem Kapitel geht es um den Einstieg in Git.
 Wir erklären zunächst einige Hintergrundinformationen zu Versionskontrolltools, gehen dann dazu über, wie du Git auf deinem System zum Laufen bringst und wie du es schließlich so einrichtest, dass du damit arbeiten kannst.
