--- a/external/book/content/book/de/v2/Erste-Schritte-Zusammenfassung.html
+++ b/external/book/content/book/de/v2/Erste-Schritte-Zusammenfassung.html
@@ -16,6 +16,9 @@ book:
     previous: book/de/v2/Erste-Schritte-Hilfe-finden
     next: book/de/v2/Git-Grundlagen-Ein-Git-Repository-anlegen
 title: Git - Zusammenfassung
+aliases:
+- "/book/de/Los-geht’s-Zusammenfassung.html"
+- "/book/de/v1/Los-geht’s-Zusammenfassung.html"
 ---
 <h2 id="_zusammenfassung">Zusammenfassung</h2>
 <div class="paragraph">
