--- a/external/book/content/book/de/v2/Git-Branching-Branch-Management.html
+++ b/external/book/content/book/de/v2/Git-Branching-Branch-Management.html
@@ -16,6 +16,9 @@ book:
     previous: book/de/v2/Git-Branching-Einfaches-Branching-und-Merging
     next: book/de/v2/Git-Branching-Branching-Workflows
 title: Git - Branch-Management
+aliases:
+- "/book/de/Git-Branching-Branch-Management.html"
+- "/book/de/v1/Git-Branching-Branch-Management.html"
 ---
 <h2 id="_branch_management">Branch-Management</h2>
 <div class="paragraph">
