--- a/external/book/content/book/de/v2/Git-Branching-Branching-Workflows.html
+++ b/external/book/content/book/de/v2/Git-Branching-Branching-Workflows.html
@@ -16,6 +16,9 @@ book:
     previous: book/de/v2/Git-Branching-Branch-Management
     next: book/de/v2/Git-Branching-Remote-Branches
 title: Git - Branching-Workflows
+aliases:
+- "/book/de/Git-Branching-Branching-Workflows.html"
+- "/book/de/v1/Git-Branching-Branching-Workflows.html"
 ---
 <h2 id="_branching_workflows">Branching-Workflows</h2>
 <div class="paragraph">
