--- a/external/book/content/book/de/v2/Git-Branching-Einfaches-Branching-und-Merging.html
+++ b/external/book/content/book/de/v2/Git-Branching-Einfaches-Branching-und-Merging.html
@@ -16,6 +16,9 @@ book:
     previous: book/de/v2/Git-Branching-Branches-auf-einen-Blick
     next: book/de/v2/Git-Branching-Branch-Management
 title: Git - Einfaches Branching und Merging
+aliases:
+- "/book/de/Git-Branching-Einfaches-Branching-und-Merging.html"
+- "/book/de/v1/Git-Branching-Einfaches-Branching-und-Merging.html"
 ---
 <h2 id="_einfaches_branching_und_merging">Einfaches Branching und Merging</h2>
 <div class="paragraph">
