--- a/external/book/content/book/de/v2/Git-Branching-Rebasing.html
+++ b/external/book/content/book/de/v2/Git-Branching-Rebasing.html
@@ -16,6 +16,9 @@ book:
     previous: book/de/v2/Git-Branching-Remote-Branches
     next: book/de/v2/Git-Branching-Zusammenfassung
 title: Git - Rebasing
+aliases:
+- "/book/de/Git-Branching-Rebasing.html"
+- "/book/de/v1/Git-Branching-Rebasing.html"
 ---
 <h2 id="_rebasing">Rebasing</h2>
 <div class="paragraph">
