--- a/external/book/content/book/de/v2/Git-Grundlagen-Anzeigen-der-Commit-Historie.html
+++ b/external/book/content/book/de/v2/Git-Grundlagen-Anzeigen-der-Commit-Historie.html
@@ -16,6 +16,9 @@ book:
     previous: book/de/v2/Git-Grundlagen-Änderungen-nachverfolgen-und-im-Repository-speichern
     next: book/de/v2/Git-Grundlagen-Ungewollte-Änderungen-rückgängig-machen
 title: Git - Anzeigen der Commit-Historie
+aliases:
+- "/book/de/Git-Grundlagen-Die-Commit-Historie-anzeigen.html"
+- "/book/de/v1/Git-Grundlagen-Die-Commit-Historie-anzeigen.html"
 ---
 <h2 id="_viewing_history">Anzeigen der Commit-Historie</h2>
 <div class="paragraph">
