--- a/external/book/content/book/de/v2/Git-Grundlagen-Ein-Git-Repository-anlegen.html
+++ b/external/book/content/book/de/v2/Git-Grundlagen-Ein-Git-Repository-anlegen.html
@@ -16,6 +16,11 @@ book:
     previous: book/de/v2/Erste-Schritte-Zusammenfassung
     next: book/de/v2/Git-Grundlagen-Änderungen-nachverfolgen-und-im-Repository-speichern
 title: Git - Ein Git-Repository anlegen
+aliases:
+- "/book/de/Git-Grundlagen.html"
+- "/book/de/v1/Git-Grundlagen.html"
+- "/book/de/Git-Grundlagen-Ein-Git-Repository-anlegen.html"
+- "/book/de/v1/Git-Grundlagen-Ein-Git-Repository-anlegen.html"
 ---
 <p>Falls du es eilig hast und du nur die Zeit hast ein einziges Kapitel dieses hervorragendes Buches durchzulesen, bist du hier genau richtig.</p><p>Dieses Kapitel behandelt alle grundlegenden Befehle, die Du benötigst, um den großteil der Aufgaben zu erledigen, die mit Git erledigt werden müssen.
 Am Ende des Kapitels solltest Du in der Lage sein, ein neues Repository anzulegen und zu konfigurieren, Dateien zu versionieren bzw. Sie aus der Versionsverwaltung zu entfernen, Dateien in die Staging-Area hinzuzufügen und einen Commit durchzuführen.</p><p>Außerdem wird gezeigt, wie Du Git so konfigurieren kannst, dass es bestimmte Dateien und Dateimuster ignoriert, wie Du Fehler schnell und einfach rückgängig machen, wie Du die Historie eines Projekts durchsuchen und Änderungen zwischen Commits nachschlagen, und wie Du von einem Remote-Repository Daten herunter- bzw. dort hochladen kannst.</p>
