--- a/external/book/content/book/de/v2/Git-Grundlagen-Git-Aliases.html
+++ b/external/book/content/book/de/v2/Git-Grundlagen-Git-Aliases.html
@@ -16,6 +16,9 @@ book:
     previous: book/de/v2/Git-Grundlagen-Taggen
     next: book/de/v2/Git-Grundlagen-Zusammenfassung
 title: Git - Git Aliases
+aliases:
+- "/book/de/Git-Grundlagen-Tipps-und-Tricks.html"
+- "/book/de/v1/Git-Grundlagen-Tipps-und-Tricks.html"
 ---
 <h2 id="_git_aliases">Git Aliases</h2>
 <div class="paragraph">
