--- a/external/book/content/book/de/v2/Git-Grundlagen-Mit-Remotes-arbeiten.html
+++ b/external/book/content/book/de/v2/Git-Grundlagen-Mit-Remotes-arbeiten.html
@@ -16,6 +16,9 @@ book:
     previous: book/de/v2/Git-Grundlagen-Ungewollte-Änderungen-rückgängig-machen
     next: book/de/v2/Git-Grundlagen-Taggen
 title: Git - Mit Remotes arbeiten
+aliases:
+- "/book/de/Git-Grundlagen-Mit-externen-Repositorys-arbeiten.html"
+- "/book/de/v1/Git-Grundlagen-Mit-externen-Repositorys-arbeiten.html"
 ---
 <h2 id="_remote_repos">Mit Remotes arbeiten</h2>
 <div class="paragraph">
