--- a/external/book/content/book/de/v2/Git-Grundlagen-Taggen.html
+++ b/external/book/content/book/de/v2/Git-Grundlagen-Taggen.html
@@ -16,6 +16,9 @@ book:
     previous: book/de/v2/Git-Grundlagen-Mit-Remotes-arbeiten
     next: book/de/v2/Git-Grundlagen-Git-Aliases
 title: Git - Taggen
+aliases:
+- "/book/de/Git-Grundlagen-Tags.html"
+- "/book/de/v1/Git-Grundlagen-Tags.html"
 ---
 <h2 id="_git_tagging">Taggen</h2>
 <div class="paragraph">
