--- a/external/book/content/book/de/v2/Git-Grundlagen-Ungewollte-Änderungen-rückgängig-machen.html
+++ b/external/book/content/book/de/v2/Git-Grundlagen-Ungewollte-Änderungen-rückgängig-machen.html
@@ -17,6 +17,9 @@ book:
     next: book/de/v2/Git-Grundlagen-Mit-Remotes-arbeiten
 title: Git - Ungewollte Änderungen rückgängig machen
 url: "/book/de/v2/Git-Grundlagen-Ungewollte-Änderungen-rückgängig-machen.html"
+aliases:
+- "/book/de/Git-Grundlagen-Änderungen-rückgängig-machen.html"
+- "/book/de/v1/Git-Grundlagen-Änderungen-rückgängig-machen.html"
 ---
 <h2 id="_undoing">Ungewollte Änderungen rückgängig machen</h2>
 <div class="paragraph">
