--- a/external/book/content/book/de/v2/Git-Grundlagen-Änderungen-nachverfolgen-und-im-Repository-speichern.html
+++ b/external/book/content/book/de/v2/Git-Grundlagen-Änderungen-nachverfolgen-und-im-Repository-speichern.html
@@ -17,6 +17,9 @@ book:
     next: book/de/v2/Git-Grundlagen-Anzeigen-der-Commit-Historie
 title: Git - Änderungen nachverfolgen und im Repository speichern
 url: "/book/de/v2/Git-Grundlagen-Änderungen-nachverfolgen-und-im-Repository-speichern.html"
+aliases:
+- "/book/de/Git-Grundlagen-Änderungen-am-Repository-nachverfolgen.html"
+- "/book/de/v1/Git-Grundlagen-Änderungen-am-Repository-nachverfolgen.html"
 ---
 <h2 id="_änderungen_nachverfolgen_und_im_repository_speichern">Änderungen nachverfolgen und im Repository speichern</h2>
 <div class="paragraph">
