--- a/external/book/content/book/de/v2/Git-Interna-Basisbefehle-und-Standardbefehle-Plumbing-and-Porcelain.html
+++ b/external/book/content/book/de/v2/Git-Interna-Basisbefehle-und-Standardbefehle-Plumbing-and-Porcelain.html
@@ -16,6 +16,11 @@ book:
     previous: book/de/v2/Git-und-andere-VCS-Systeme-Zusammenfassung
     next: book/de/v2/Git-Interna-Git-Objekte
 title: Git - Basisbefehle und Standardbefehle (Plumbing and Porcelain)
+aliases:
+- "/book/de/Git-Internas.html"
+- "/book/de/v1/Git-Internas.html"
+- "/book/de/Git-Internas-Plumbing-und-Porcelain.html"
+- "/book/de/v1/Git-Internas-Plumbing-und-Porcelain.html"
 ---
 <p>Möglicherweise bist du von einem der vorherigen Kapitel direkt zu diesem Kapitel gesprungen. Oder aber du bist jetzt hier gelandet, nachdem du das gesamte Buch chronologisch bis zu diesem Punkt gelesen hast. Wie auch immer, wir werden hier das Innenleben und die Implementierung von Git behandeln.
 Wir finden, dass das Verstehen dieser Informationen von grundlegender Bedeutung ist, um zu verstehen, wie hilfreich und extrem leistungsfähig Git ist. Andere haben jedoch argumentiert, dass es für Anfänger verwirrend und unnötig komplex sein kann.
