--- a/external/book/content/book/de/v2/Git-Interna-Die-Referenzspezifikation-engl-Refspec.html
+++ b/external/book/content/book/de/v2/Git-Interna-Die-Referenzspezifikation-engl-Refspec.html
@@ -16,6 +16,9 @@ book:
     previous: book/de/v2/Git-Interna-Packdateien-engl-Packfiles
     next: book/de/v2/Git-Interna-Transfer-Protokolle
 title: Git - Die Referenzspezifikation (engl. Refspec)
+aliases:
+- "/book/de/Git-Internas-Die-Refspec.html"
+- "/book/de/v1/Git-Internas-Die-Refspec.html"
 ---
 <h2 id="_refspec">Die Referenzspezifikation (engl. Refspec)</h2>
 <div class="paragraph">
