--- a/external/book/content/book/de/v2/Git-Interna-Git-Objekte.html
+++ b/external/book/content/book/de/v2/Git-Interna-Git-Objekte.html
@@ -16,6 +16,9 @@ book:
     previous: book/de/v2/Git-Interna-Basisbefehle-und-Standardbefehle-Plumbing-and-Porcelain
     next: book/de/v2/Git-Interna-Git-Referenzen
 title: Git - Git Objekte
+aliases:
+- "/book/de/Git-Internas-Git-Objekte.html"
+- "/book/de/v1/Git-Internas-Git-Objekte.html"
 ---
 <h2 id="_objects">Git Objekte</h2>
 <div class="paragraph">
