--- a/external/book/content/book/de/v2/Git-Interna-Git-Referenzen.html
+++ b/external/book/content/book/de/v2/Git-Interna-Git-Referenzen.html
@@ -16,6 +16,9 @@ book:
     previous: book/de/v2/Git-Interna-Git-Objekte
     next: book/de/v2/Git-Interna-Packdateien-engl-Packfiles
 title: Git - Git Referenzen
+aliases:
+- "/book/de/Git-Internas-Git-Referenzen.html"
+- "/book/de/v1/Git-Internas-Git-Referenzen.html"
 ---
 <h2 id="_git_refs">Git Referenzen</h2>
 <div class="paragraph">
