--- a/external/book/content/book/de/v2/Git-Interna-Packdateien-engl-Packfiles.html
+++ b/external/book/content/book/de/v2/Git-Interna-Packdateien-engl-Packfiles.html
@@ -16,6 +16,9 @@ book:
     previous: book/de/v2/Git-Interna-Git-Referenzen
     next: book/de/v2/Git-Interna-Die-Referenzspezifikation-engl-Refspec
 title: Git - Packdateien (engl. Packfiles)
+aliases:
+- "/book/de/Git-Internas-Pack-Dateien.html"
+- "/book/de/v1/Git-Internas-Pack-Dateien.html"
 ---
 <h2 id="_packdateien_engl_packfiles">Packdateien (engl. Packfiles)</h2>
 <div class="paragraph">
