--- a/external/book/content/book/de/v2/Git-Interna-Transfer-Protokolle.html
+++ b/external/book/content/book/de/v2/Git-Interna-Transfer-Protokolle.html
@@ -16,6 +16,9 @@ book:
     previous: book/de/v2/Git-Interna-Die-Referenzspezifikation-engl-Refspec
     next: book/de/v2/Git-Interna-Wartung-und-Datenwiederherstellung
 title: Git - Transfer Protokolle
+aliases:
+- "/book/de/Git-Internas-Transfer-Protokolle.html"
+- "/book/de/v1/Git-Internas-Transfer-Protokolle.html"
 ---
 <h2 id="_transfer_protokolle">Transfer Protokolle</h2>
 <div class="paragraph">
