--- a/external/book/content/book/de/v2/Git-Interna-Wartung-und-Datenwiederherstellung.html
+++ b/external/book/content/book/de/v2/Git-Interna-Wartung-und-Datenwiederherstellung.html
@@ -16,6 +16,9 @@ book:
     previous: book/de/v2/Git-Interna-Transfer-Protokolle
     next: book/de/v2/Git-Interna-Zusammenfassung
 title: Git - Wartung und Datenwiederherstellung
+aliases:
+- "/book/de/Git-Internas-Wartung-und-Datenwiederherstellung.html"
+- "/book/de/v1/Git-Internas-Wartung-und-Datenwiederherstellung.html"
 ---
 <h2 id="_wartung_und_datenwiederherstellung">Wartung und Datenwiederherstellung</h2>
 <div class="paragraph">
