--- a/external/book/content/book/de/v2/Git-Tools-Debuggen-mit-Git.html
+++ b/external/book/content/book/de/v2/Git-Tools-Debuggen-mit-Git.html
@@ -16,6 +16,9 @@ book:
     previous: book/de/v2/Git-Tools-Rerere
     next: book/de/v2/Git-Tools-Submodule
 title: Git - Debuggen mit Git
+aliases:
+- "/book/de/Git-Tools-Mit-Hilfe-von-Git-debuggen.html"
+- "/book/de/v1/Git-Tools-Mit-Hilfe-von-Git-debuggen.html"
 ---
 <h2 id="_debuggen_mit_git">Debuggen mit Git</h2>
 <div class="paragraph">
