--- a/external/book/content/book/de/v2/Git-Tools-Den-Verlauf-umschreiben.html
+++ b/external/book/content/book/de/v2/Git-Tools-Den-Verlauf-umschreiben.html
@@ -16,6 +16,9 @@ book:
     previous: book/de/v2/Git-Tools-Suchen
     next: book/de/v2/Git-Tools-Reset-entzaubert
 title: Git - Den Verlauf umschreiben
+aliases:
+- "/book/de/Git-Tools-Änderungshistorie-verändern.html"
+- "/book/de/v1/Git-Tools-Änderungshistorie-verändern.html"
 ---
 <h2 id="_rewriting_history">Den Verlauf umschreiben</h2>
 <div class="paragraph">
