--- a/external/book/content/book/de/v2/Git-Tools-Fortgeschrittenes-Merging.html
+++ b/external/book/content/book/de/v2/Git-Tools-Fortgeschrittenes-Merging.html
@@ -16,6 +16,9 @@ book:
     previous: book/de/v2/Git-Tools-Reset-entzaubert
     next: book/de/v2/Git-Tools-Rerere
 title: Git - Fortgeschrittenes Merging
+aliases:
+- "/book/de/Git-Tools-Subtree-Merging.html"
+- "/book/de/v1/Git-Tools-Subtree-Merging.html"
 ---
 <h2 id="_advanced_merging">Fortgeschrittenes Merging</h2>
 <div class="paragraph">
