--- a/external/book/content/book/de/v2/Git-Tools-Interaktives-Stagen.html
+++ b/external/book/content/book/de/v2/Git-Tools-Interaktives-Stagen.html
@@ -16,6 +16,9 @@ book:
     previous: book/de/v2/Git-Tools-Revisions-Auswahl
     next: book/de/v2/Git-Tools-Stashen-und-Bereinigen
 title: Git - Interaktives Stagen
+aliases:
+- "/book/de/Git-Tools-Interaktives-Stagen.html"
+- "/book/de/v1/Git-Tools-Interaktives-Stagen.html"
 ---
 <h2 id="_interactive_staging">Interaktives Stagen</h2>
 <div class="paragraph">
