--- a/external/book/content/book/de/v2/Git-Tools-Revisions-Auswahl.html
+++ b/external/book/content/book/de/v2/Git-Tools-Revisions-Auswahl.html
@@ -16,6 +16,11 @@ book:
     previous: book/de/v2/GitHub-Zusammenfassung
     next: book/de/v2/Git-Tools-Interaktives-Stagen
 title: Git - Revisions-Auswahl
+aliases:
+- "/book/de/Git-Tools.html"
+- "/book/de/v1/Git-Tools.html"
+- "/book/de/Git-Tools-Revision-Auswahl.html"
+- "/book/de/v1/Git-Tools-Revision-Auswahl.html"
 ---
 <p>Inzwischen hast du die meisten der gängigen Befehle und Workflows kennen gelernt. Du benötigst sie, um ein Git-Repository für deine Quellcode-Kontrolle zu verwalten oder zu pflegen.
 Du hast die grundlegenden Aufgaben des Tracking und Committens von Dateien gelernt und du hast die Leistungsfähigkeit der Staging-Area und Branching- und Merging-Funktionen mit Feature-Branches genutzt.</p><p>Jetzt wirst du eine Reihe von anderen nützlichen Git-Funktionen entdecken. Du wirst diese nicht unbedingt im Alltag einsetzen müssen, aber vielleicht irgendwann einmal benötigen.</p>
