--- a/external/book/content/book/de/v2/Git-Tools-Stashen-und-Bereinigen.html
+++ b/external/book/content/book/de/v2/Git-Tools-Stashen-und-Bereinigen.html
@@ -16,6 +16,9 @@ book:
     previous: book/de/v2/Git-Tools-Interaktives-Stagen
     next: book/de/v2/Git-Tools-Deine-Arbeit-signieren
 title: Git - Stashen und Bereinigen
+aliases:
+- "/book/de/Git-Tools-Stashen.html"
+- "/book/de/v1/Git-Tools-Stashen.html"
 ---
 <h2 id="_git_stashing">Stashen und Bereinigen</h2>
 <div class="paragraph">
