--- a/external/book/content/book/de/v2/Git-Tools-Submodule.html
+++ b/external/book/content/book/de/v2/Git-Tools-Submodule.html
@@ -16,6 +16,9 @@ book:
     previous: book/de/v2/Git-Tools-Debuggen-mit-Git
     next: book/de/v2/Git-Tools-Bundling
 title: Git - Submodule
+aliases:
+- "/book/de/Git-Tools-Submodule.html"
+- "/book/de/v1/Git-Tools-Submodule.html"
 ---
 <h2 id="_git_submodules">Submodule</h2>
 <div class="paragraph">
