--- a/external/book/content/book/de/v2/Git-auf-dem-Server-Die-Protokolle.html
+++ b/external/book/content/book/de/v2/Git-auf-dem-Server-Die-Protokolle.html
@@ -16,6 +16,11 @@ book:
     previous: book/de/v2/Git-Branching-Zusammenfassung
     next: book/de/v2/Git-auf-dem-Server-Git-auf-einem-Server-einrichten
 title: Git - Die Protokolle
+aliases:
+- "/book/de/Git-auf-dem-Server.html"
+- "/book/de/v1/Git-auf-dem-Server.html"
+- "/book/de/Git-auf-dem-Server-Die-Protokolle.html"
+- "/book/de/v1/Git-auf-dem-Server-Die-Protokolle.html"
 ---
 <p>
 An dieser Stelle solltest du in der Lage sein, die meisten der täglichen Aufgaben zu erledigen, für die du Git verwenden wirst.
