--- a/external/book/content/book/de/v2/Git-auf-dem-Server-Einrichten-des-Servers.html
+++ b/external/book/content/book/de/v2/Git-auf-dem-Server-Einrichten-des-Servers.html
@@ -16,6 +16,9 @@ book:
     previous: book/de/v2/Git-auf-dem-Server-Erstellung-eines-SSH-Public-Keys
     next: book/de/v2/Git-auf-dem-Server-Git-Daemon
 title: Git - Einrichten des Servers
+aliases:
+- "/book/de/Git-auf-dem-Server-Einrichten-des-Servers.html"
+- "/book/de/v1/Git-auf-dem-Server-Einrichten-des-Servers.html"
 ---
 <h2 id="_setting_up_server">Einrichten des Servers</h2>
 <div class="paragraph">
