--- a/external/book/content/book/de/v2/Git-auf-dem-Server-Erstellung-eines-SSH-Public-Keys.html
+++ b/external/book/content/book/de/v2/Git-auf-dem-Server-Erstellung-eines-SSH-Public-Keys.html
@@ -16,6 +16,9 @@ book:
     previous: book/de/v2/Git-auf-dem-Server-Git-auf-einem-Server-einrichten
     next: book/de/v2/Git-auf-dem-Server-Einrichten-des-Servers
 title: Git - Erstellung eines SSH-Public-Keys
+aliases:
+- "/book/de/Git-auf-dem-Server-Generiere-Deinen-öffentlichen-SSH-Schlüssel.html"
+- "/book/de/v1/Git-auf-dem-Server-Generiere-Deinen-öffentlichen-SSH-Schlüssel.html"
 ---
 <h2 id="_generate_ssh_key">Erstellung eines SSH-Public-Keys</h2>
 <div class="paragraph">
