--- a/external/book/content/book/de/v2/Git-auf-dem-Server-Git-auf-einem-Server-einrichten.html
+++ b/external/book/content/book/de/v2/Git-auf-dem-Server-Git-auf-einem-Server-einrichten.html
@@ -16,6 +16,9 @@ book:
     previous: book/de/v2/Git-auf-dem-Server-Die-Protokolle
     next: book/de/v2/Git-auf-dem-Server-Erstellung-eines-SSH-Public-Keys
 title: Git - Git auf einem Server einrichten
+aliases:
+- "/book/de/Git-auf-dem-Server-Git-auf-einen-Server-bekommen.html"
+- "/book/de/v1/Git-auf-dem-Server-Git-auf-einen-Server-bekommen.html"
 ---
 <h2 id="_getting_git_on_a_server">Git auf einem Server einrichten</h2>
 <div class="paragraph">
