--- a/external/book/content/book/de/v2/Git-auf-dem-Server-Von-Drittanbietern-gehostete-Optionen.html
+++ b/external/book/content/book/de/v2/Git-auf-dem-Server-Von-Drittanbietern-gehostete-Optionen.html
@@ -16,6 +16,17 @@ book:
     previous: book/de/v2/Git-auf-dem-Server-GitLab
     next: book/de/v2/Git-auf-dem-Server-Zusammenfassung
 title: Git - Von Drittanbietern gehostete Optionen
+aliases:
+- "/book/de/Git-auf-dem-Server-Öffentlicher-Zugang.html"
+- "/book/de/v1/Git-auf-dem-Server-Öffentlicher-Zugang.html"
+- "/book/de/Git-auf-dem-Server-GitWeb.html"
+- "/book/de/v1/Git-auf-dem-Server-GitWeb.html"
+- "/book/de/Git-auf-dem-Server-Gitosis.html"
+- "/book/de/v1/Git-auf-dem-Server-Gitosis.html"
+- "/book/de/Git-auf-dem-Server-Gitolite.html"
+- "/book/de/v1/Git-auf-dem-Server-Gitolite.html"
+- "/book/de/Git-auf-dem-Server-Git-Hosting.html"
+- "/book/de/v1/Git-auf-dem-Server-Git-Hosting.html"
 ---
 <h2 id="_von_drittanbietern_gehostete_optionen">Von Drittanbietern gehostete Optionen</h2>
 <div class="paragraph">
