--- a/external/book/content/book/de/v2/Git-auf-dem-Server-Zusammenfassung.html
+++ b/external/book/content/book/de/v2/Git-auf-dem-Server-Zusammenfassung.html
@@ -16,6 +16,9 @@ book:
     previous: book/de/v2/Git-auf-dem-Server-Von-Drittanbietern-gehostete-Optionen
     next: book/de/v2/Verteiltes-Git-Verteilter-Arbeitsablauf
 title: Git - Zusammenfassung
+aliases:
+- "/book/de/Git-auf-dem-Server-Einrichten-eines-Benutzeraccounts.html"
+- "/book/de/v1/Git-auf-dem-Server-Einrichten-eines-Benutzeraccounts.html"
 ---
 <h2 id="_zusammenfassung_4">Zusammenfassung</h2>
 <div class="paragraph">
