--- a/external/book/content/book/de/v2/Git-einrichten-Beispiel-für-Git-forcierte-Regeln.html
+++ b/external/book/content/book/de/v2/Git-einrichten-Beispiel-für-Git-forcierte-Regeln.html
@@ -17,6 +17,9 @@ book:
     next: book/de/v2/Git-einrichten-Zusammenfassung
 title: Git - Beispiel für Git-forcierte Regeln
 url: "/book/de/v2/Git-einrichten-Beispiel-für-Git-forcierte-Regeln.html"
+aliases:
+- "/book/de/Git-individuell-einrichten-Beispiel-für-die-Durchsetzung-von-Richtlinien-mit-Hilfe-von-Git.html"
+- "/book/de/v1/Git-individuell-einrichten-Beispiel-für-die-Durchsetzung-von-Richtlinien-mit-Hilfe-von-Git.html"
 ---
 <h2 id="_an_example_git_enforced_policy">Beispiel für Git-forcierte Regeln</h2>
 <div class="paragraph">
