--- a/external/book/content/book/de/v2/Git-einrichten-Git-Attribute.html
+++ b/external/book/content/book/de/v2/Git-einrichten-Git-Attribute.html
@@ -16,6 +16,9 @@ book:
     previous: book/de/v2/Git-einrichten-Git-Konfiguration
     next: book/de/v2/Git-einrichten-Git-Hooks
 title: Git - Git-Attribute
+aliases:
+- "/book/de/Git-individuell-einrichten-Git-Attribute.html"
+- "/book/de/v1/Git-individuell-einrichten-Git-Attribute.html"
 ---
 <h2 id="_git_attribute">Git-Attribute</h2>
 <div class="paragraph">
