--- a/external/book/content/book/de/v2/Git-einrichten-Git-Hooks.html
+++ b/external/book/content/book/de/v2/Git-einrichten-Git-Hooks.html
@@ -16,6 +16,9 @@ book:
     previous: book/de/v2/Git-einrichten-Git-Attribute
     next: book/de/v2/Git-einrichten-Beispiel-für-Git-forcierte-Regeln
 title: Git - Git Hooks
+aliases:
+- "/book/de/Git-individuell-einrichten-Git-Hooks.html"
+- "/book/de/v1/Git-individuell-einrichten-Git-Hooks.html"
 ---
 <h2 id="_git_hooks">Git Hooks</h2>
 <div class="paragraph">
