--- a/external/book/content/book/de/v2/Git-einrichten-Git-Konfiguration.html
+++ b/external/book/content/book/de/v2/Git-einrichten-Git-Konfiguration.html
@@ -16,6 +16,11 @@ book:
     previous: book/de/v2/Git-Tools-Zusammenfassung
     next: book/de/v2/Git-einrichten-Git-Attribute
 title: Git - Git Konfiguration
+aliases:
+- "/book/de/Git-individuell-einrichten.html"
+- "/book/de/v1/Git-individuell-einrichten.html"
+- "/book/de/Git-individuell-einrichten-Git-Konfiguration.html"
+- "/book/de/v1/Git-individuell-einrichten-Git-Konfiguration.html"
 ---
 <p>Bisher haben wir die grundlegende Funktionsweise und die Verwendung von Git erläutert, sowie eine Reihe von Tools vorgestellt, die dir helfen sollen, Git einfach und effizient zu nutzen.
 In diesem Kapitel werden wir zeigen, wie du Git noch individueller einsetzen kannst, indem du einige wichtige Konfigurationen anpasst und das Hook-System anwendest.
