--- a/external/book/content/book/de/v2/Git-und-andere-VCS-Systeme-Git-als-Client.html
+++ b/external/book/content/book/de/v2/Git-und-andere-VCS-Systeme-Git-als-Client.html
@@ -16,6 +16,11 @@ book:
     previous: book/de/v2/Git-einrichten-Zusammenfassung
     next: book/de/v2/Git-und-andere-VCS-Systeme-Migration-zu-Git
 title: Git - Git als Client
+aliases:
+- "/book/de/Git-und-andere-Versionsverwaltungen.html"
+- "/book/de/v1/Git-und-andere-Versionsverwaltungen.html"
+- "/book/de/Git-und-andere-Versionsverwaltungen-Git-und-Subversion.html"
+- "/book/de/v1/Git-und-andere-Versionsverwaltungen-Git-und-Subversion.html"
 ---
 <p>Die Welt ist nicht perfekt.
 Normalerweise kannst du nicht jedes Projekt, mit dem du arbeitest, sofort auf Git umstellen.
