--- a/external/book/content/book/de/v2/Git-und-andere-VCS-Systeme-Migration-zu-Git.html
+++ b/external/book/content/book/de/v2/Git-und-andere-VCS-Systeme-Migration-zu-Git.html
@@ -16,6 +16,9 @@ book:
     previous: book/de/v2/Git-und-andere-VCS-Systeme-Git-als-Client
     next: book/de/v2/Git-und-andere-VCS-Systeme-Zusammenfassung
 title: Git - Migration zu Git
+aliases:
+- "/book/de/Git-und-andere-Versionsverwaltungen-Zu-Git-umziehen.html"
+- "/book/de/v1/Git-und-andere-Versionsverwaltungen-Zu-Git-umziehen.html"
 ---
 <h2 id="_migrating">Migration zu Git</h2>
 <div class="paragraph">
