--- a/external/book/content/book/de/v2/Git-und-andere-VCS-Systeme-Zusammenfassung.html
+++ b/external/book/content/book/de/v2/Git-und-andere-VCS-Systeme-Zusammenfassung.html
@@ -16,6 +16,9 @@ book:
     previous: book/de/v2/Git-und-andere-VCS-Systeme-Migration-zu-Git
     next: book/de/v2/Git-Interna-Basisbefehle-und-Standardbefehle-Plumbing-and-Porcelain
 title: Git - Zusammenfassung
+aliases:
+- "/book/de/Git-und-andere-Versionsverwaltungen-Zusammenfassung.html"
+- "/book/de/v1/Git-und-andere-Versionsverwaltungen-Zusammenfassung.html"
 ---
 <h2 id="_zusammenfassung_13">Zusammenfassung</h2>
 <div class="paragraph">
