--- a/external/book/content/book/de/v2/Verteiltes-Git-Ein-Projekt-verwalten.html
+++ b/external/book/content/book/de/v2/Verteiltes-Git-Ein-Projekt-verwalten.html
@@ -16,6 +16,9 @@ book:
     previous: book/de/v2/Verteiltes-Git-An-einem-Projekt-mitwirken
     next: book/de/v2/Verteiltes-Git-Zusammenfassung
 title: Git - Ein Projekt verwalten
+aliases:
+- "/book/de/Distribuierte-Arbeit-mit-Git-xxx-Ein-Projekt-betreiben.html"
+- "/book/de/v1/Distribuierte-Arbeit-mit-Git-xxx-Ein-Projekt-betreiben.html"
 ---
 <h2 id="_ein_projekt_verwalten">Ein Projekt verwalten</h2>
 <div class="paragraph">
