--- a/external/book/content/book/de/v2/Git-Branching-Branches-auf-einen-Blick.html
+++ b/external/book/content/book/de/v2/Git-Branching-Branches-auf-einen-Blick.html
@@ -16,6 +16,11 @@ book:
     previous: book/de/v2/Git-Grundlagen-Zusammenfassung
     next: book/de/v2/Git-Branching-Einfaches-Branching-und-Merging
 title: Git - Branches auf einen Blick
+aliases:
+- "/book/de/Git-Branching.html"
+- "/book/de/v1/Git-Branching.html"
+- "/book/de/Git-Branching-Was-ist-ein-Branch?.html"
+- "/book/de/v1/Git-Branching-Was-ist-ein-Branch?.html"
 ---
 <p>
 Nahezu jedes VCS unterstützt eine Form von Branching.
