--- a/external/book/content/book/de/v2/Git-Branching-Remote-Branches.html
+++ b/external/book/content/book/de/v2/Git-Branching-Remote-Branches.html
@@ -16,6 +16,9 @@ book:
     previous: book/de/v2/Git-Branching-Branching-Workflows
     next: book/de/v2/Git-Branching-Rebasing
 title: Git - Remote-Branches
+aliases:
+- "/book/de/Git-Branching-Externe-Branches.html"
+- "/book/de/v1/Git-Branching-Externe-Branches.html"
 ---
 <h2 id="_remote_branches">Remote-Branches</h2>
 <div class="paragraph">
