--- a/external/book/content/book/de/v2/Git-Branching-Zusammenfassung.html
+++ b/external/book/content/book/de/v2/Git-Branching-Zusammenfassung.html
@@ -16,6 +16,9 @@ book:
     previous: book/de/v2/Git-Branching-Rebasing
     next: book/de/v2/Git-auf-dem-Server-Die-Protokolle
 title: Git - Zusammenfassung
+aliases:
+- "/book/de/Git-Branching-Zusammenfassung.html"
+- "/book/de/v1/Git-Branching-Zusammenfassung.html"
 ---
 <h2 id="_zusammenfassung_3">Zusammenfassung</h2>
 <div class="paragraph">
