--- a/external/book/content/book/de/v2/Git-Grundlagen-Zusammenfassung.html
+++ b/external/book/content/book/de/v2/Git-Grundlagen-Zusammenfassung.html
@@ -16,6 +16,9 @@ book:
     previous: book/de/v2/Git-Grundlagen-Git-Aliases
     next: book/de/v2/Git-Branching-Branches-auf-einen-Blick
 title: Git - Zusammenfassung
+aliases:
+- "/book/de/Git-Grundlagen-Zusammenfassung.html"
+- "/book/de/v1/Git-Grundlagen-Zusammenfassung.html"
 ---
 <h2 id="_zusammenfassung_2">Zusammenfassung</h2>
 <div class="paragraph">
