--- a/external/book/content/book/de/v2/Git-Tools-Zusammenfassung.html
+++ b/external/book/content/book/de/v2/Git-Tools-Zusammenfassung.html
@@ -16,6 +16,9 @@ book:
     previous: book/de/v2/Git-Tools-Anmeldeinformationen-speichern
     next: book/de/v2/Git-einrichten-Git-Konfiguration
 title: Git - Zusammenfassung
+aliases:
+- "/book/de/Git-Tools-Zusammenfassung.html"
+- "/book/de/v1/Git-Tools-Zusammenfassung.html"
 ---
 <h2 id="_zusammenfassung_11">Zusammenfassung</h2>
 <div class="paragraph">
