--- a/external/book/content/book/de/v2/Git-auf-dem-Server-Git-Daemon.html
+++ b/external/book/content/book/de/v2/Git-auf-dem-Server-Git-Daemon.html
@@ -16,6 +16,9 @@ book:
     previous: book/de/v2/Git-auf-dem-Server-Einrichten-des-Servers
     next: book/de/v2/Git-auf-dem-Server-Smart-HTTP
 title: Git - Git-Daemon
+aliases:
+- "/book/de/Git-auf-dem-Server-Git-Daemon.html"
+- "/book/de/v1/Git-auf-dem-Server-Git-Daemon.html"
 ---
 <h2 id="_git_daemon">Git-Daemon</h2>
 <div class="paragraph">
