--- a/external/book/content/book/de/v2/Git-einrichten-Zusammenfassung.html
+++ b/external/book/content/book/de/v2/Git-einrichten-Zusammenfassung.html
@@ -16,6 +16,9 @@ book:
     previous: book/de/v2/Git-einrichten-Beispiel-für-Git-forcierte-Regeln
     next: book/de/v2/Git-und-andere-VCS-Systeme-Git-als-Client
 title: Git - Zusammenfassung
+aliases:
+- "/book/de/Git-individuell-einrichten-Zusammenfassung.html"
+- "/book/de/v1/Git-individuell-einrichten-Zusammenfassung.html"
 ---
 <h2 id="_zusammenfassung_12">Zusammenfassung</h2>
 <div class="paragraph">
