--- a/external/book/content/book/de/v2/Verteiltes-Git-An-einem-Projekt-mitwirken.html
+++ b/external/book/content/book/de/v2/Verteiltes-Git-An-einem-Projekt-mitwirken.html
@@ -16,6 +16,9 @@ book:
     previous: book/de/v2/Verteiltes-Git-Verteilter-Arbeitsablauf
     next: book/de/v2/Verteiltes-Git-Ein-Projekt-verwalten
 title: Git - An einem Projekt mitwirken
+aliases:
+- "/book/de/Distribuierte-Arbeit-mit-Git-xxx-An-einem-Projekt-mitarbeiten.html"
+- "/book/de/v1/Distribuierte-Arbeit-mit-Git-xxx-An-einem-Projekt-mitarbeiten.html"
 ---
 <h2 id="_contributing_project">An einem Projekt mitwirken</h2>
 <div class="paragraph">
