--- a/external/book/content/book/de/v2/Verteiltes-Git-Verteilter-Arbeitsablauf.html
+++ b/external/book/content/book/de/v2/Verteiltes-Git-Verteilter-Arbeitsablauf.html
@@ -16,6 +16,11 @@ book:
     previous: book/de/v2/Git-auf-dem-Server-Zusammenfassung
     next: book/de/v2/Verteiltes-Git-An-einem-Projekt-mitwirken
 title: Git - Verteilter Arbeitsablauf
+aliases:
+- "/book/de/Distribuierte-Arbeit-mit-Git-xxx.html"
+- "/book/de/v1/Distribuierte-Arbeit-mit-Git-xxx.html"
+- "/book/de/Distribuierte-Arbeit-mit-Git-xxx-Distribuierte-Workflows.html"
+- "/book/de/v1/Distribuierte-Arbeit-mit-Git-xxx-Distribuierte-Workflows.html"
 ---
 <p>
 Nachdem du ein entferntes Git-Repository eingerichtet hast, in dem alle Entwickler ihren Code teilen können, und du mit den grundlegenden Git-Befehlen in einem lokalen Arbeitsablauf vertraut bist, wirst du einige der verteilten Arbeitsabläufe verwenden, die Git dir ermöglicht.</p><p>In diesem Kapitel erfährst du, wie du mit Git in einer verteilten Umgebung als Mitwirkender (engl. Contributor) und Integrator arbeitest. Das heißt, du lernst, wie du Quelltext erfolgreich zu einem Projekt beisteuern und es dir und dem Projektbetreuer so einfach wie möglich machst. Außerdem lernst du, wie du ein Projekt erfolgreich verwaltest, in dem mehrere Entwicklern Inhalte beisteuern.</p>
