--- a/external/book/content/book/de/v2/Verteiltes-Git-Zusammenfassung.html
+++ b/external/book/content/book/de/v2/Verteiltes-Git-Zusammenfassung.html
@@ -16,6 +16,9 @@ book:
     previous: book/de/v2/Verteiltes-Git-Ein-Projekt-verwalten
     next: book/de/v2/GitHub-Einrichten-und-Konfigurieren-eines-Kontos
 title: Git - Zusammenfassung
+aliases:
+- "/book/de/Distribuierte-Arbeit-mit-Git-xxx-Zusammenfassung.html"
+- "/book/de/v1/Distribuierte-Arbeit-mit-Git-xxx-Zusammenfassung.html"
 ---
 <h2 id="_zusammenfassung_7">Zusammenfassung</h2>
 <div class="paragraph">
