--- a/external/book/content/book/de/v2/_index.html
+++ b/external/book/content/book/de/v2/_index.html
@@ -13,5 +13,6 @@ page_title: Git - Book
 url: "/book/de/v2.html"
 aliases:
 - "/book/de/v2/index.html"
+- "/book/de/v1/index.html"
 - "/book/de/index.html"
 ---
